Add new stream manipulation examples and enhance Trick01 class with additional methods